<resources>
    <string name="app_name">Voucherify</string>

    <!-- Common -->
    <string name="common_empty"></string>
    <string name="common_error">Error</string>
    <string name="common_hint_email">Email</string>
    <string name="common_hint_password">Password</string>
    <string name="common_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>

    <!-- Titles -->
    <string name="title_login">Log in</string>
    <string name="title_vouchers">Vouchers</string>
    <string name="title_customers">Customers</string>
    <string name="title_orders">Orders</string>
    <string name="title_products">Products</string>
    <string name="title_settings">Settings</string>
    <string name="title_shopping_cart">Shopping cart</string>
    <string name="title_order_address">Order address</string>
    <string name="title_payment_details">Payment details</string>
    <string name="title_order_details">Order details</string>
    <string name="title_order_summary">Summary</string>

    <!-- Login -->
    <string name="login_button">Login</string>
    <string name="login_forgot_password_button">Forgot password?</string>
    <string name="login_forgot_password_link">https://app.voucherify.io/#/resetPassword</string>

    <!-- Menus -->
    <string name="menu_item_shopping_cart">Shopping cart</string>
    <string name="menu_item_customers_search">Search</string>

    <!-- Dashboard admin navigation -->
    <string name="dashboard_admin_bottom_navigation_vouchers">Vouchers</string>
    <string name="dashboard_admin_bottom_navigation_customers">Customers</string>
    <string name="dashboard_admin_bottom_navigation_products">Products</string>
    <string name="dashboard_admin_bottom_navigation_settings">Settings</string>

    <!-- Dashboard customer navigation -->
    <string name="dashboard_customer_bottom_navigation_products">Products</string>
    <string name="dashboard_customer_bottom_navigation_orders">Orders</string>
    <string name="dashboard_customer_bottom_navigation_settings">Settings</string>

    <!-- Settings -->
    <string name="settings_version_template">Version %1$s(%2$d)</string>
    <string name="settings_switch_user_role_name">User</string>
    <string name="settings_switch_admin_role_name">Admin</string>
    <string name="settings_switch_general_section_label">General</string>

    <!-- Admin settings -->
    <string name="settings_admin_logout_label">Log out</string>

    <string name="settings_switch_user_label">Switch user</string>

    <!-- Admin settings: Switch user -->
    <string name="settings_switch_user_picker_header">Switch perspective to</string>

    <!-- Customer settings -->
    <string name="settings_customer_switch_admin_label">Switch to admin</string>

    <!-- Customer details -->
    <string name="customer_profile_bar_total_amount_label">Order total amount</string>
    <string name="customer_profile_bar_total_count_label">Order total count</string>
    <string name="customer_profile_bar_total_redeemed_label">Total redeemed</string>

    <string name="customer_profile_description_label">Description</string>
    <string name="customer_profile_city_label">City</string>
    <string name="customer_profile_email_label">Email</string>
    <string name="customer_details_order_total_amount_label">Order total amount:</string>
    <string name="customer_details_order_total_count_label">Order total count:</string>
    <string name="customer_details_total_redeemed_label">Total redeemed:</string>

    <!-- Vouchers -->
    <string name="vouchers_admin_all_tab_title">All</string>
    <string name="vouchers_admin_active_tab_title">Active</string>
    <string name="voucher_active_label">Active</string>
    <string name="voucher_inactive_label">Inactive</string>
    <string name="voucher_discount_type_label">Voucher</string>
    <string name="voucher_gift_type_label">Giftcard</string>

    <!-- Voucher details admin -->
    <string name="voucher_admin_details_description">Description</string>
    <string name="voucher_admin_details_category">Category</string>
    <string name="voucher_admin_details_type">Type</string>
    <string name="voucher_admin_details_value">Value</string>

    <!-- Onboarding -->
    <string name="onboarding_header_page_1">Welcome!</string>
    <string name="onboarding_header_page_2">Getting onboard</string>
    <string name="onboarding_header_page_3">Tips &amp; Tricks</string>

    <string name="onboarding_body_page_1">Learn all about Voucherify. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque egestas sagittis nisl, lobortis porta dolor maximus ac.</string>
    <string name="onboarding_body_page_2">Learn all about Voucherify. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque egestas sagittis nisl, lobortis porta dolor maximus ac.</string>
    <string name="onboarding_body_page_3">Learn all about Voucherify. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque egestas sagittis nisl, lobortis porta dolor maximus ac.</string>

    <string name="onboarding_skip_label">Skip</string>
    <string name="onboarding_finish_label">Finish</string>

    <!-- Shopping cart -->
    <string name="shopping_cart_item_quantity_template">QTY: %1$d</string>
    <string name="shopping_cart_total_price_template">%1$.2f</string>
    <string name="shopping_cart_list_checkout_label">Checkout</string>
    <string name="shopping_cart_footer_list_total_label">Total</string>

    <!-- Order address -->
    <string name="order_address_header">Address details</string>
    <string name="order_contact_header">Contact</string>
    <string name="order_address_name_hint">Name and surname</string>
    <string name="order_address_city_hint">City</string>
    <string name="order_address_street_hint">Street and number</string>
    <string name="order_address_zip_code_hint">ZIP Code</string>
    <string name="order_address_phone_hint">Phone number</string>
    <string name="order_address_email_hint">Email</string>
    <string name="order_address_payment_details_label">Payment details</string>

    <!-- Order details -->
    <string name="order_details_address_details_label">Address delivery</string>
    <string name="order_details_payment_method_label">Payment method</string>
    <string name="order_details_cost_label">Order cost</string>
    <string name="order_details_voucher_label">Voucher</string>
    <string name="order_details_voucher_hint">Voucher code</string>
    <string name="order_details_voucher_apply_label">Apply</string>
    <string name="order_details_buy_label">Buy</string>
    <string name="order_details_payment_method_credit_card_type_label">Credit card</string>
    <string name="order_details_payment_method_credit_card_number_hint">**** **** **** 6789</string>

    <!-- Order summary -->
    <string name="order_summary_header">Thank you!</string>
    <string name="order_summary_body">We received you order under transaction number XXXXX. We will ship it to you in less than a week.\nIn case of other questions, you can reach us by calling on +48 XXX XXX XXX</string>
    <string name="order_summary_show_finish_label">Finish</string>

    <!-- Payment details -->
    <string name="payment_details_summary_label">Summary</string>
    <string name="payment_details_credit_card_label">Credit card</string>
    <string name="payment_details_credit_add_payment_option_label">Add payment option</string>

    <!-- Credit card -->
    <string name="credit_card_cvv_front_hint">0000</string>
    <string name="credit_card_number_front_hint">XXXX XXXX XXXX 6789</string>
    <string name="credit_card_number_hint">**** **** **** 6789</string>
    <string name="credit_card_holder_front_hint">Card holder</string>
    <string name="credit_card_holder_sample_front_label">Joe Don</string>
    <string name="credit_card_expire_date_front_hint">Expiry date</string>
    <string name="credit_card_expire_date_mm_yy_format_front_hint">12/20</string>

</resources>
