<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/voucherify_background"
    android:fillViewport="true"
    android:padding="@dimen/spacing_medium">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/Voucherify.TextAppearance.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_details_address_details_label" />

            <TextView
                android:id="@+id/order_details_address_details"
                style="@style/Voucherify.TextAppearance.Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TODO" />

            <TextView
                style="@style/Voucherify.TextAppearance.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/order_details_payment_method_label" />

            <TextView
                android:id="@+id/order_details_payment_method"
                style="@style/Voucherify.TextAppearance.Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TODO" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@color/voucherify_divider_default" />

            <TextView
                style="@style/Voucherify.TextAppearance.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/order_details_cost_label" />

            <TextView
                android:id="@+id/order_details_cost_value"
                style="@style/Voucherify.TextAppearance.Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TODO" />

            <TextView
                style="@style/Voucherify.TextAppearance.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/order_details_voucher_label" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/order_details_voucher_hint"
                android:lines="1"
                android:maxLength="100" />

            <Button
                android:id="@+id/order_details_voucher_validate_button"
                style="@style/Voucherify.Base.Button.Green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/default_touch_target"
                android:text="@string/order_details_voucher_apply_label" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/margin_large"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/order_details_buy_button"
                style="@style/Voucherify.Base.Button.Borderless.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selectable_view_accent"
                android:text="@string/order_details_buy_label"
                android:textColor="@color/text_selector_button_light" />
        </LinearLayout>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>
