<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/voucherify_background"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/spacing_medium">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/order_summary_header"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:scaleType="fitCenter"
            android:src="@drawable/order_summary" />

        <TextView
            android:id="@+id/order_summary_header"
            style="@style/Voucherify.TextAppearance.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:gravity="center"
            android:text="@string/order_summary_header"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_big" />

        <TextView
            style="@style/Voucherify.TextAppearance.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_summary_header"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:gravity="center"
            android:text="@string/order_summary_body" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/order_summary_history_button"
            style="@style/Voucherify.Base.Button.Accent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/order_summary_show_finish_label" />

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>