<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/voucherify_background">

    <include layout="@layout/view_credit_card_front" />

    <RelativeLayout
        android:id="@+id/payment_details_card_details_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/payment_details_card_container"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_medium"
        android:paddingTop="@dimen/spacing_small"
        android:paddingBottom="@dimen/spacing_small">

        <TextView
            android:id="@+id/payment_details_card_label"
            style="@style/Voucherify.TextAppearance.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/payment_details_credit_card_label"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            style="@style/Voucherify.TextAppearance.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/payment_details_chevron"
            android:layout_toRightOf="@id/payment_details_card_label"
            android:gravity="center_horizontal"
            android:text="@string/credit_card_number_hint"
            android:textSize="@dimen/text_size_medium" />

        <ImageView
            android:id="@+id/payment_details_chevron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_chevron_right_24px" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/payment_details_card_details_container"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@color/voucherify_grey_light" />

    <TextView
        style="@style/Voucherify.TextAppearance.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/payment_details_card_details_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:drawableLeft="@drawable/ic_add"
        android:drawablePadding="@dimen/spacing_small"
        android:gravity="center"
        android:text="@string/payment_details_credit_add_payment_option_label"
        android:textSize="@dimen/text_size_xmedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/payment_details_order_summary_button"
            style="@style/Voucherify.Base.Button.Borderless.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selectable_view_accent"
            android:minHeight="@dimen/button_touch_target"
            android:text="@string/payment_details_summary_label"
            android:textColor="@color/text_selector_button_light" />

    </LinearLayout>

</RelativeLayout>