<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/payment_details_card_container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_medium"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_mastercard">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="250dp"
                android:layout_marginTop="60dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/front_card_cvv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/credit_card_cvv_front_hint"
                    android:maxWidth="60dp"
                    android:minWidth="60dp"
                    android:paddingTop="@dimen/spacing_small"
                    android:paddingBottom="@dimen/spacing_small"
                    android:shadowColor="@color/text_shadow"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/voucherify_text_semi_white"
                    android:visibility="gone" />

            </LinearLayout>

            <TextView
                android:id="@+id/front_card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:hint="@string/credit_card_number_front_hint"
                android:shadowColor="@color/text_shadow"
                android:textColor="@color/voucherify_text_light"
                android:textColorHint="@color/voucherify_text_semi_white"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/front_card_number"
                android:layout_alignParentBottom="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/card_name_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/credit_card_holder_front_hint"
                        android:textColor="@color/voucherify_white_80"
                        android:textColorHint="@color/voucherify_text_semi_white"
                        android:textSize="@dimen/text_size_normal" />

                    <TextView
                        android:id="@+id/front_card_holder_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/credit_card_holder_sample_front_label"
                        android:maxWidth="150dp"
                        android:maxLines="1"
                        android:minWidth="150dp"
                        android:paddingTop="@dimen/spacing_small"
                        android:paddingBottom="@dimen/spacing_small"
                        android:shadowColor="@color/text_shadow"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:textColor="@color/voucherify_text_light"
                        android:textColorHint="@color/voucherify_text_semi_white"
                        android:textSize="@dimen/text_size_normal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/card_expiry_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/credit_card_expire_date_front_hint"
                        android:textColor="@color/voucherify_white_80"
                        android:textColorHint="@color/voucherify_text_semi_white"
                        android:textSize="@dimen/text_size_normal" />

                    <TextView
                        android:id="@+id/front_card_expiry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/credit_card_expire_date_mm_yy_format_front_hint"
                        android:maxWidth="150dp"
                        android:minWidth="150dp"
                        android:paddingTop="@dimen/spacing_small"
                        android:paddingBottom="@dimen/spacing_small"
                        android:shadowColor="@color/text_shadow"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:textColor="@color/voucherify_text_light"
                        android:textColorHint="@color/voucherify_text_semi_white"
                        android:textSize="@dimen/text_size_normal" />
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>
</merge>